--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.7
+  curved_navigation_bar: ^1.0.3 
+  font_awesome_flutter: ^10.5.0
+  carousel_slider: ^4.2.1
+
 
 dev_dependencies:
   flutter_test:
