--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   curved_navigation_bar: ^1.0.3 
   font_awesome_flutter: ^10.5.0
   carousel_slider: ^4.2.1
+  sliding_up_panel: ^2.0.0+1
+
 
 
 dev_dependencies:
